@@ -95,6 +95,8 @@ extern const QString SINGLE_OPTION_GRADATIONSIZE;
 extern const QString LONG_OPTION_GRADATIONHEIGHT;
 extern const QString SINGLE_OPTION_GRADATIONHEIGHT;
 
+extern const QString LONG_OPTION_USER_MATERIAL;
+
 extern const QString LONG_OPTION_IGNORE_MARGINS;
 extern const QString SINGLE_OPTION_IGNORE_MARGINS;
 
